# foreman

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  release-please-config.json
.claude/hooks/: session-start.sh
.githooks/: commit-msg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  check.yml  ci.yml  codeql.yml  commit-style.yml  dependency-review.yml  deploy.yml  release-please.yml  scheduled-check.yml  scorecard.yml
config/: __init__.py  asgi.py  celery.py  logformat.py  settings.py  urls.py
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
docs/: deploy.md  runbook.md
docs/adr/: 0002-retries-dlq-lease.md  0003-observability.md  0004-realtime-websockets.md  0005-deployment-platform.md  README.md
jobs/: admin.py  consumers.py  ingest.py  metrics.py  models.py  realtime.py  reports.py  routing.py  serializers.py  services.py  tasks.py  views.py
jobs/management/commands/: redrive.py
jobs/migrations/: 0001_initial.py  0002_outboxevent.py  0004_reliability_fields_and_property_unique.py
jobs/templates/jobs/: demo.html
jobs/tests/: factories.py  test_broadcast_seams.py  test_celery_wiring.py  test_consumers.py  test_demo.py  test_deploy.py  test_health.py  test_jobs_api.py  test_logging.py  test_metrics.py  test_outbox.py  test_realtime.py  test_reliability.py  test_report.py
scripts/: railway-deploy.sh
