[project]
name = "foreman"
version = "0.1.0"
description = "Event-driven job-processing platform — property-data import with transactional outbox, idempotent workers, retries, dead-letter, and live WebSocket status."
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.3",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.2",
    "gunicorn>=23.0",
    "celery[redis]>=5.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

# Application (not a library) — don't try to build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear, flake8-django
select = ["F", "E", "W", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
# Coverage flags live in `make ci` (not here) so local `make test` runs stay fast
# and aren't blocked by the threshold mid-development.
addopts = "-q --reuse-db"

[tool.coverage.run]
source = ["jobs", "config"]
# Omit framework glue and generated/test code so the threshold reflects real logic.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/wsgi.py",
    "config/asgi.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
