[project]
name = "foreman"
version = "0.5.0"
description = "Event-driven job-processing platform — property-data import with transactional outbox, idempotent workers, retries, dead-letter, and live WebSocket status."
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6,<6.1",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.3.4",
    "dj-database-url>=2.2",
    "celery[redis]>=5.6.3",
    "prometheus-client>=0.21",
    "channels[daphne]>=4.3.2",
    "channels-redis>=4.3.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
audit = [
    "pip-audit>=2.7",
]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.15.20",
    "pre-commit>=4.0",
    "mypy>=2.1.0",
    "django-stubs[compatible-mypy]>=6.0.6,<6.1",
    "djangorestframework-stubs[compatible-mypy]>=3.17.0",
    "celery-types>=0.26.0",
    "pytest-asyncio>=1.4.0",
]

# Application (not a library) — don't try to build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Base: pyflakes, pycodestyle, isort, pyupgrade, bugbear, flake8-django. Plus:
# Ruff-specific (RUF), simplify (SIM), comprehensions (C4), pytest-style (PT),
# pathlib (PTH), misc-lints (PIE), naming (N), blind-except (BLE), and
# flake8-bandit (S) — the lightweight security scan.
select = ["F", "E", "W", "I", "UP", "B", "DJ", "RUF", "SIM", "C4", "PT", "PTH", "PIE", "N", "BLE", "S"]
# Django leans on mutable class attributes (admin list_display, Meta.indexes); RUF012
# would demand ClassVar on every one for no safety gain.
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]
"jobs/tests/*" = ["S101"]   # asserts are the point of a test
"conftest.py" = ["S101"]
"jobs/tasks.py" = ["S311"]  # random.uniform is backoff jitter, not crypto
"scripts/*" = ["S607"]      # dev validators invoke `git` from PATH (portable across OSes)

[tool.mypy]
python_version = "3.12"
strict = true
# One deliberate strict relaxation: this is JSON-shaped domain code (job payloads,
# CSV rows, JSONField results), so bare dict/list read better than dict[str, Any]
# and the values are Any either way — disallow_any_generics buys noise, not safety.
disallow_any_generics = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
files = ["config", "jobs", "manage.py", "conftest.py"]
pretty = true

[tool.django-stubs]
django_settings_module = "config.settings"

# Generated migrations: not our code to type.
[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

# Test suite: factory_boy ships py.typed, but its metaclass __call__ isn't typed to
# return the model — mypy sees `JobFactory()` as the factory, not a Job, so strict mode
# yields ~100 false positives with no real signal. Application code is type-checked
# strictly; tests are validated by running them (pytest). Still parsed here, so a broken
# import or syntax error in a test is caught.
[[tool.mypy.overrides]]
module = ["jobs.tests.*"]
ignore_errors = true

# Channels / channels-redis / daphne ship no type stubs; ignore the missing imports (the
# async consumer's untyped base is handled by one scoped `# type: ignore[misc]`).
[[tool.mypy.overrides]]
module = ["channels.*", "channels_redis.*", "daphne.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
# Async consumer tests run under pytest-asyncio in auto mode (no per-test marker needed, so
# --strict-markers stays green); pinning the fixture loop scope silences a pytest-asyncio
# PytestDeprecationWarning that filterwarnings=error would otherwise turn into a failure.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Coverage flags live in `make ci` (not here) so local `make test` runs stay fast
# and aren't blocked by the threshold mid-development.
addopts = "-q --reuse-db --strict-markers --strict-config"
# An xpassing xfail is a failure (the bug was fixed — drop the marker).
xfail_strict = true
# Warnings are errors, so a deprecated API or a misconfigured test fails loudly.
# Add module-scoped ignores ONLY for genuine third-party deprecations we don't own.
filterwarnings = [
    "error",
    # WhiteNoise warns when STATIC_ROOT is absent — expected in tests (unit tests run no
    # collectstatic; prod builds it in the image) and harmless (tests serve no static).
    "ignore:No directory at:UserWarning",
]

[tool.coverage.run]
source = ["jobs", "config"]
# Omit framework glue and generated/test code so the threshold reflects real logic.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/wsgi.py",
    "config/asgi.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
